# SpayGen

./: README.md  entrypoint.sh  pyproject.toml
generation/: page.css  page.html
src/: server.py
src/config/: settings.py
src/core/: html_chunker.py
src/langgraph_agents/: chunk_processor_node.py  chunked_modification_node.py  content_node.py  html_fixing_node.py  html_rewriting_node.py  modifier_node.py  orchestrator_graph.py  selective_chunk_processor_node.py  state.py  targeted_fixing_node.py  template_node.py  uniqueness_node.py  validation_node.py
src/models/: openai_client_manager.py  pydantic_models.py
src/tools/: bing_validator.py  qdrant_manager.py  template_loader.py
src/utils/: logging.py  validators.py
templates/full_page_html/dance_studio_page/: description.txt  template.html
templates/full_page_html/ecommerce_basic/: description.txt  style.css  template.html
templates/full_page_html/jewelry_page/: description.txt  template.html
templates/full_page_html/landing_page/: description.txt  style.css  template.html
templates/full_page_html/learning_page/: description.txt  template.html
templates/full_page_html/living_planet_page/: description.txt  template.html
templates/full_page_html/perfumy_page/: description.txt  template.html
