[project]
name = "spaygen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.1.0",
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.3",
    "rich>=13.7.1",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "jiter>=0.10.0",
    "mcp>=1.9.4",
    "numpy>=1.26.4",
    "protobuf>=5.27.1",
    "sse-starlette>=2.3.1",
    "tqdm>=4.66.2",
    "certifi>=2024.2.2",
    "requests>=2.31.0",
    "urllib3>=2.2.1",
    "jinja2>=3.1.3",
    "anyio>=4.2.0",
]
